[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyUI_MqUtils"
dynamic = ["version"]
description = "MQ utility nodes for ComfyUI"
authors = [
  {name = "ComfyUI_MqUtils", email = "mikeshuangyan@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = []

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "pre-commit", # runs linting on commit
    "ruff",  # linting
]

[project.urls]
bugs = "https://github.com/mikeshuangyan/ComfyUI_MqUtils/issues"
homepage = "https://github.com/mikeshuangyan/ComfyUI_MqUtils"
Repository = "https://github.com/mikeshuangyan/ComfyUI_MqUtils"


[tool.comfy]
PublisherId = "mikeshuangyan"
DisplayName = "ComfyUI MqUtils"


[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.dynamic]
version = {attr = "ComfyUI_MqUtils.__version__"}

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
